@@ -34,3 +34,4 @@ Add Elite 4 weather
 More available wild fire pokemon (Houndour, Growlithe, and Magby)
 Add Deoxys to Altering Cave
 Add nicknaming to party menu
+Spread out XP Share
